--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"dependencies": {
 		"core-js": "^3.3.2",
 		"electron-context-menu": "^0.15.1",
+		"electron-store": "^5.1.0",
 		"vue": "^2.6.10",
 		"vue-router": "^3.1.3"
 	},
