--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
 	"dependencies": {
 		"core-js": "^3.3.2",
 		"electron-context-menu": "^0.15.1",
+		"electron-settings": "^3.2.0",
 		"electron-store": "^5.1.0",
 		"vue": "^2.6.10",
-		"vue-router": "^3.1.3"
+		"vue-router": "^3.1.3",
+		"vuex": "^3.1.2"
 	},
 	"devDependencies": {
 		"@vue/cli-plugin-babel": "^4.0.0",
